# ppf.docmap

./: .gitignore  pyproject.toml  setup.cfg  tox.ini
docs/: CONTRIBUTING.md  DEVELOPMENT.md  README.md  README_pypi.md
docs/dev/: DEV_DOCS.md  filescanners.md  notes.md  release-process.md
src/ppf/docmap/: __init__.py  cli.py  docmap.py  exceptions.py  filescanners.py  utils.py
tests/: __init__.py  common.py  test_crawler.py  test_docx.py  test_md.py  test_pdf.py  test_smoke.py
tests/data/: Document A.docx  Document A.md  Document B.docx  Document C.docx  Document D.md
