[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["ppf"]
namespaces = true

[project]
name = "ppf-docmap"
version = "0.1"
authors = [
    {name = "Adrian Schlatter"},
]
license = {text = "BSD2"}
description = "python tools for document crawling"
readme = "docs/README_pypi.md"
requires-python = ">=3"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Other Audience",
    "Topic :: Utilities",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent"
]
keywords = ["document", "link", "crawl", "python", "graph"]
dependencies = [
    "python-magic",
    "python-docx",
    "pdfx",
    "graphviz"
]

[project.urls]
repository = "https://github.com/adrianschlatter/ppf.docmap/tree/master"
changelog = "https://github.com/adrianschlatter/ppf.docmap/tree/master/README.md"

[project.optional-dependencies]
test = [
    "pytest",
    "check-manifest",
    "flake8",
    "flake8-pyproject",  # to make flake8 read pyproject.toml
    "coverage"
]
dev = [
    "check-manifest",
    "twine"
]

[tool.flake8]
per-file-ignores = [
    # imported but unused, import *, undefined name:
    "__init__.py: F401, F403, F821",
    # bare except: We *are* trying to crash it:
    "test_smoke.py: E722"
]

[tool.check-manifest]
ignore = [
    "tox.ini",
    "tests",
    "tests/**",
    "docs/**"
]
