[metadata]
name = ppf-docmap
version = attr: ppf.docmap.__version__
description = python tools for document crawling
long_description = file: docs/README_pypi.md
long_description_content_type = text/markdown
url = https://github.com/adrianschlatter/ppf.docmap/tree/master
author = Adrian Schlatter
license = BSD2
license_files = LICENSE
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Intended Audience :: Other Audience
    Topic :: Utilities
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3
    Operating System :: OS Independent
keywords = document, link, crawl, python, graph

[options]
python_requires = >=3
package_dir = 
	= src
packages = find_namespace:
install_requires =
    python-magic
    python-docx
    pdfx
    regex
    graphviz

[options.packages.find]
where = src

[options.extras_require]
# List additional groups of dependencies here. You can install these using
# pip install -e .[dev,test]
test =
    pytest
    check-manifest
    flake8
    coverage
dev =
    tox
    twine

[tool:pytest]
testpaths =
    tests

[flake8]
per-file-ignores =
    # imported but unused, import *, undefined name:
    __init__.py: F401, F403, F821
    # bare except: We *are* trying to crash it:
    test_smoke.py: E722
filename =
    */src/*.py
    */docs/*.py
    */tests/*.py
    setup.py

[check-manifest]
ignore =
    tox.ini
    tests
    tests/**
    docs/**

[coverage:run]
command_line = -m pytest
branch = True

[coverage:report]
omit = tests/*

